Mon Oct  7 12:53:24 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* connq.c (connq_listen): Unlock CQ->lock when returning EWOULDBLOCK.

Thu Sep 12 16:43:09 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(pflocal): Omit special dependency.

Tue Jul 23 19:44:29 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* sock.c (sock_create): Remove NEXT_SOCK_ID.

Sat Jul 13 20:20:55 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io.c (S_io_reauthenticate): Repeat sock_create_port and
 	auth_server_authenticate for as long as we get EINTR.

Sun Jul  7 21:30:33 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io.c (S_io_reauthenticate): Don't use unsafe MOVE_SEND in call
 	to auth_server_authenticate.

Mon Jul  1 18:45:35 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* sock.c (sock_create): Initialize ID field to MACH_PORT_NULL.

Thu Jun 27 17:58:09 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (LCLHDRS): Add sserver.h.

Thu Jun 20 16:33:06 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (pflocal): Depend on ../libfshelp/libfshelp.a.

Wed May 15 20:27:38 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* sock.c (sock_free): Destroy SOCK's id port if necessary.

Tue May 14 14:05:33 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* io.c (S_io_identity): New function.
	* sock.h (struct sock): Make the id field a receive right, not an int.

Thu May  9 20:20:20 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io.c (S_io_reauthenticate): Use new auth_server_authenticate
 	protocol.

Thu May  9 12:14:37 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* io.c (S_io_select): Remove TAG arg.

Mon Apr 15 12:52:32 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (MIGSFLAGS): Look for mig-mutate.h in $(srcdir).

Fri Jan 26 16:46:37 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* socket.c (S_socket_recv): Test for MSG_OOB in IN_FLAGS, not FLAGS.